--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <header>
-    <img src="YRC logo.jpg" alt="Yorkshire Rose Care Logo" />
+   <img src="yrc-logo.jpg" alt="Yorkshire Rose Care Logo" />
     <h1>Yorkshire Rose Care Ltd</h1>
     <p>Proud, Resilient and Committed</p>
   </header>
