--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>If you would like more information or wish to make a referral, please get in touch:</p>
     <p><strong>Email:</strong> <a href="mailto:info@yorkshirerosecare.co.uk">info@yorkshirerosecare.co.uk</a></p>
 
-    <form class="contact-form" action="mailto:info@yorkshirerosecare.co.uk" method="POST" enctype="text/plain">
+    <form class="contact-form" action="mailto:"https://formspree.io/f/xnnegodr" method="POST" enctype="text/plain">
       <input type="text" name="name" placeholder="Your name" required />
       <input type="email" name="email" placeholder="Your email" required />
       <textarea name="message" rows="5" placeholder="Your message" required></textarea>
