--- a/index.html
+++ b/index.html
@@ -12,98 +12,143 @@
 }
 </style>
 </head>
+
 <body class="bg-gray-50 text-gray-900">
 
-<!-- Top Contact Bar -->
+<!-- TOP CONTACT BAR -->
 <div class="bg-[var(--brand-blue)] text-white py-2 text-center text-lg font-semibold">
-  <p>Email: info@yorkshirerosecare.co.uk | Tel: 07793 487 157</p>
+  📞 07793 487 157 &nbsp;&nbsp; | &nbsp;&nbsp; ✉️ info@yorkshirerosecare.co.uk
 </div>
 
+<!-- HEADER -->
 <header class="bg-white shadow-md border-b-4 border-[var(--brand-pink)]">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+
     <div class="flex items-center space-x-3">
-      <img src="yrc-logo.jpg" alt="Yorkshire Rose Care Logo" class="h-20 drop-shadow-md">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/White_Rose_of_York_symbol.svg"
+           alt="Yorkshire Rose Care Logo"
+           class="h-16 drop-shadow-md">
       <h1 class="text-4xl font-extrabold text-[var(--brand-pink)]">Yorkshire Rose Care</h1>
     </div>
+
     <nav class="space-x-6 text-lg font-semibold">
       <a href="#about" class="hover:text-[var(--brand-pink)]">About Us</a>
       <a href="#services" class="hover:text-[var(--brand-pink)]">Services</a>
       <a href="#values" class="hover:text-[var(--brand-pink)]">Values</a>
-      <a href="#partners" class="hover:text-[var(--brand-pink)]">Our Partners</a>
+      <a href="#partners" class="hover:text-[var(--brand-pink)]">Partners</a>
       <a href="#contact" class="hover:text-[var(--brand-pink)]">Contact</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO SECTION WITH IMAGE -->
+<!-- HERO -->
 <section class="relative bg-[var(--brand-blue)] py-20 px-6 text-white">
-  <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
+  <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+
     <div>
-      <h2 class="text-5xl font-extrabold mb-6">Empowering Individuals Across West Yorkshire</h2>
-      <p class="text-xl mb-6">High‑quality mental health and learning disability support designed to empower, protect and promote independence — proper Yorkshire care, done right.</p>
-      <a href="#contact" class="bg-[var(--brand-pink)] px-6 py-3 rounded-lg text-xl font-semibold shadow-md hover:bg-pink-700">Get in Touch</a>
+      <h2 class="text-5xl font-extrabold mb-6">
+        Proper Yorkshire Support,  
+        Delivered With Heart
+      </h2>
+      <p class="text-xl mb-6">
+        High-quality mental health and learning disability support across West Yorkshire —
+        empowering individuals to live confidently and independently.
+      </p>
+
+      <a href="#contact" class="bg-[var(--brand-pink)] px-8 py-3 rounded-lg text-xl font-semibold shadow-lg hover:bg-pink-700">
+        Get Support
+      </a>
     </div>
-    <img src="https://images.unsplash.com/photo-1584467735871-2f6f0a7a34c6?auto=format&fit=crop&w=800&q=80" class="rounded-2xl shadow-xl" alt="Support image">
+
+    <img src="https://undraw.co/api/illustrations/8cb34890-0764-49a5-9644-2df5ced45120"
+         class="rounded-2xl shadow-xl" alt="Digital Support Illustration">
+
   </div>
 </section>
 
+
 <!-- ABOUT US -->
 <section id="about" class="container mx-auto px-6 py-20">
-  <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-lg">
+  <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-lg leading-relaxed">
+
     <h2 class="text-4xl font-bold mb-6">About Us</h2>
-    <p class="text-lg mb-4">Yorkshire Rose Care Ltd was founded with a simple mission: to offer honest, reliable, high‑quality support across West Yorkshire. We’re built on Yorkshire values — community spirit, resilience, and always looking out for one another.</p>
-    <p class="text-lg mb-4">Our service supports individuals with mental health needs and learning disabilities to live confidently and independently. Whether it’s emotional wellbeing, daily living, or building life skills, we tailor everything to each person.</p>
-    <p class="text-lg">We do this work because everyone deserves the chance to thrive — with dignity, respect, and proper Yorkshire compassion.</p>
+
+    <p class="text-lg mb-4">
+      Yorkshire Rose Care was born from two friends with one clear mission — to improve the
+      lives of people across our wonderful Yorkshire communities. We specialise in mental health
+      support, learning disability support and independence-focused care.
+    </p>
+
+    <p class="text-lg mb-4">
+      We believe that everyone deserves the opportunity to live safely, confidently and with dignity.
+      Whether it’s daily living, emotional wellbeing or building community connections, we stand by
+      the people we support — every step of the way.
+    </p>
+
+    <p class="text-lg">
+      Our roots may be in Bradford, but our hearts and our work reach across all of West Yorkshire.
+      Proper care, proper support — the Yorkshire way.
+    </p>
+
   </div>
 </section>
 
 <!-- VALUES -->
 <section id="values" class="bg-white py-20 px-6">
   <div class="container mx-auto">
-    <h2 class="text-4xl font-bold text-[var(--brand-blue)] text-center mb-12">Our Values</h2>
+    <h2 class="text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
+
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
-      <div class="p-6 bg-[var(--brand-blue)] text-white rounded-2xl shadow-lg">
-        <h3 class="text-2xl font-bold mb-3">Proud</h3>
-        <p>We take pride in our work, our people, and the communities we support — proudly Yorkshire through and through.</p>
+      <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
+        <h3 class="text-3xl font-bold mb-3">Proud</h3>
+        <p>We take pride in every individual we support and the positive impact we make daily.</p>
       </div>
 
-      <div class="p-6 bg-[var(--brand-blue)] text-white rounded-2xl shadow-lg">
-        <h3 class="text-2xl font-bold mb-3">Resilient</h3>
-        <p>We stay strong and solution‑focused, supporting people through life’s challenges with kindness and determination.</p>
+      <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-pink)] text-white">
+        <h3 class="text-3xl font-bold mb-3">Resilient</h3>
+        <p>We provide strength, stability and encouragement during challenging times.</p>
       </div>
 
-      <div class="p-6 bg-[var(--brand-blue)] text-white rounded-2xl shadow-lg">
-        <h3 class="text-2xl font-bold mb-3">Committed</h3>
-        <p>We’re committed to providing safe, person‑centred support that genuinely changes lives.</p>
+      <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
+        <h3 class="text-3xl font-bold mb-3">Committed</h3>
+        <p>We’re dedicated to delivering safe, high-quality, person-centred support — every time.</p>
       </div>
 
     </div>
   </div>
 </section>
 
-<!-- SERVICES WITH IMAGES -->
+
+<!-- SERVICES -->
 <section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white">
   <div class="container mx-auto">
     <h2 class="text-4xl font-bold text-center mb-12">What We Offer</h2>
+
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
-      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-md hover:shadow-xl transition border-4 border-[var(--brand-pink)]">
-        <img src="https://images.unsplash.com/photo-1599076480087-336189a5d8a5?auto=format&fit=crop&w=800&q=80" class="rounded-xl mb-4" alt="Domiciliary care">
-        <h3 class="text-2xl font-bold mb-3 text-[var(--brand-blue)]">Domiciliary Care</h3>
-        <p>Homecare support shaped around the individual — promoting independence, wellbeing and proper Yorkshire warmth.</p>
+      <!-- DOM CARE -->
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
+        <img src="https://undraw.co/api/illustrations/38e04c5b-0a93-4981-aff7-4dc2621c4ceb"
+             class="rounded-xl mb-4" alt="Domiciliary care illustration">
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Domiciliary Care</h3>
+        <p>Support at home, promoting independence, emotional wellbeing and daily living confidence.</p>
       </div>
 
-      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-md hover:shadow-xl transition border-4 border-[var(--brand-pink)]">
-        <img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=80" class="rounded-xl mb-4" alt="Supported living">
-        <h3 class="text-2xl font-bold mb-3 text-[var(--brand-blue)]">Supported Living</h3>
-        <p>Safe, structured support that encourages independence and builds confidence in the heart of Yorkshire.</p>
+      <!-- SUPPORTED LIVING -->
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
+        <img src="https://undraw.co/api/illustrations/7822de05-852d-4c95-9801-71f49afdb16e"
+             class="rounded-xl mb-4" alt="Supported living illustration">
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Supported Living</h3>
+        <p>Safe and structured support to build independence, confidence and community involvement.</p>
       </div>
 
-      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-md hover:shadow-xl transition border-4 border-[var(--brand-pink)]">
-        <img src="https://images.unsplash.com/photo-1584467735871-2f6f0a7a34c6?auto=format&fit=crop&w=800&q=80" class="rounded-xl mb-4" alt="Additional support services">
-        <h3 class="text-2xl font-bold mb-3 text-[var(--brand-blue)]">Additional Support</h3>
-        <p>Community engagement, skill‑building, recovery support and personalised care — all delivered with Yorkshire heart.</p>
+      <!-- MENTAL HEALTH & LD -->
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
+        <img src="https://undraw.co/api/illustrations/ed464ee5-928a-4386-88c2-2189bb15741f"
+             class="rounded-xl mb-4" alt="Mental health support illustration">
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Specialist Support</h3>
+        <p>Mental health recovery, learning disability support, life skills, wellbeing & personalised care.</p>
       </div>
 
     </div>
@@ -114,49 +159,94 @@
 <section id="partners" class="container mx-auto px-6 py-20">
   <h2 class="text-4xl font-bold text-[var(--brand-blue)] text-center mb-12">Our Partners</h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-10 text-center">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
-    <a href="https://www.bradfordcitycf.org.uk" target="_blank" class="p-6 bg-[var(--brand-pink)] text-white rounded-2xl shadow-lg font-bold text-xl">Bradford City Community Foundation</a>
-    <a href="https://www.bradfordbulls.co.uk" target="_blank" class="p-6 bg-[var(--brand-blue)] text-white rounded-2xl shadow-lg font-bold text-xl">Bradford Bulls</a>
-    <a href="https://www.mindinbradford.org.uk" target="_blank" class="p-6 bg-[var(--brand-pink)] text-white rounded-2xl shadow-lg font-bold text-xl">Mind in Bradford</a>
-    <a href="https://www.samaritans.org" target="_blank" class="p-6 bg-[var(--brand-blue)] text-white rounded-2xl shadow-lg font-bold text-xl">Samaritans</a>
-    <a href="https://andysmanclub.co.uk" target="_blank" class="p-6 bg-[var(--brand-pink)] text-white rounded-2xl shadow-lg font-bold text-xl">Andy's Man Club</a>
-    <a href="https://www.horburytown.co.uk" target="_blank" class="p-6 bg-[var(--brand-blue)] text-white rounded-2xl shadow-lg font-bold text-xl">Horbury Town Football Club</a>
+    <a href="https://www.bradfordcitycf.org.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Bradford City Community Foundation
+    </a>
+
+    <a href="https://www.rugbyleaguecares.org" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Rugby League Cares
+    </a>
+
+    <a href="https://www.mindinbradford.org.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Mind in Bradford
+    </a>
+
+    <a href="https://www.samaritans.org" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Samaritans
+    </a>
+
+    <a href="https://andysmanclub.co.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Andy’s Man Club
+    </a>
+
+    <a href="https://www.premierleague.com/communities" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Premier League Foundation
+    </a>
 
   </div>
 </section>
 
+
 <!-- CONTACT -->
 <section id="contact" class="bg-[var(--brand-pink)] py-20 px-6 text-white">
   <div class="container mx-auto max-w-3xl">
+
     <h2 class="text-4xl font-bold text-center mb-10">Contact Us</h2>
 
-    <form action="https://formspree.io/f/xnnegodr" method="POST" class="bg-white text-gray-900 p-8 rounded-2xl shadow-md border-4 border-[var(--brand-blue)]">
+    <form action="https://formspree.io/f/xnnegodr" method="POST"
+          class="bg-white text-gray-900 p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-blue)]">
 
-      <label class="block mb-4">
-        <span class="font-semibold text-[var(--brand-blue)]">Full Name</span>
-        <input type="text" name="name" required class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg">
+      <label class="block mb-6">
+        <span class="text-lg font-semibold text-[var(--brand-blue)]">Full Name</span>
+        <input type="text" name="name" required
+               class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg">
       </label>
 
-      <label class="block mb-4">
-        <span class="font-semibold text-[var(--brand-blue)]">Email</span>
-        <input type="email" name="_replyto" required class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg">
+      <label class="block mb-6">
+        <span class="text-lg font-semibold text-[var(--brand-blue)]">Email</span>
+        <input type="email" name="_replyto" required
+               class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg">
       </label>
 
-      <label class="block mb-4">
-        <span class="font-semibold text-[var(--brand-blue)]">Message</span>
-        <textarea name="message" rows="5" required class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg"></textarea>
+      <label class="block mb-6">
+        <span class="text-lg font-semibold text-[var(--brand-blue)]">Message</span>
+        <textarea name="message" rows="5" required
+                  class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg"></textarea>
       </label>
 
-      <button type="submit" class="bg-[var(--brand-blue)] text-white w-full py-3 rounded-lg text-lg font-semibold hover:bg-blue-900">Send Message</button>
+      <button type="submit"
+              class="bg-[var(--brand-blue)] text-white w-full py-3 rounded-lg text-lg font-bold hover:bg-blue-900">
+        Send Message
+      </button>
+
     </form>
 
     <div class="text-center mt-10">
-      <img src="cqc-logo.png" class="mx-auto h-20 mb-4" alt="CQC Logo">
-      <a href="https://www.cqc.org.uk" class="font-bold text-xl underline text-white" target="_blank">Visit our CQC Page</a>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Care_Quality_Commission_logo.svg"
+           class="mx-auto h-20 mb-4" alt="CQC Logo">
+      <a href="https://www.cqc.org.uk"
+         class="font-bold text-xl underline text-white" target="_blank">
+         Visit our CQC Page
+      </a>
     </div>
 
-    <div class="mt-10 text-center">
-      <p class="font-bold text-lg">BizSpace Business Centre</p>
+    <div class="mt-10 text-center leading-relaxed text-lg">
+      <p class="font-bold">BizSpace Business Centre</p>
       <p>Knowles Ln, Dudley Hill, Bradford BD4 9SW</p>
-      <p class="font-semibold mt-2">Tel: 07793 487
+      <p class="font-semibold mt-2">Tel: 07793 487 157</p>
+      <p>Delivering outstanding care across West Yorkshire</p>
+    </div>
+
+  </div>
+</section>
+
+</body>
+</html>
