--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@ body { font-family: Arial, sans-serif; }
 
 <body class="bg-gray-50 text-gray-900">
 
+<!-- TOP CONTACT BAR -->
 <div class="bg-[var(--brand-blue)] text-white py-2 text-center text-lg font-semibold">
   📞 07793 487 157 &nbsp;&nbsp; | &nbsp;&nbsp; ✉️ info@yorkshirerosecare.co.uk
 </div>
 
+<!-- HEADER -->
 <header class="bg-white shadow-md border-b-4 border-[var(--brand-pink)]">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+
+    <!-- LOGO -->
     <div class="flex items-center space-x-3">
-      <img src="yrc-logo.jpg" alt="Yorkshire Rose Care Logo" class="h-20 drop-shadow-md">
+      <img src="yrc-logo.jpg" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/0/09/White_Rose_of_York_symbol.svg'" 
+           alt="Yorkshire Rose Care Logo"
+           class="h-20 drop-shadow-md">
       <h1 class="text-4xl font-extrabold text-[var(--brand-pink)]">Yorkshire Rose Care</h1>
     </div>
 
@@ -36,15 +42,27 @@ body { font-family: Arial, sans-serif; }
       <a href="#partners" class="hover:text-[var(--brand-pink)]">Partners</a>
       <a href="#contact" class="hover:text-[var(--brand-pink)]">Contact</a>
     </nav>
+
   </div>
 </header>
 
+
+
+<!-- HERO -->
 <section class="relative bg-[var(--brand-blue)] py-20 px-6 text-white">
   <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+
     <div>
-      <h2 class="text-5xl font-extrabold mb-6">Proper Yorkshire Support, Delivered With Heart</h2>
-      <p class="text-xl mb-6">High-quality mental health and learning disability support across West Yorkshire — empowering individuals to live confidently and independently.</p>
-      <a href="#contact" class="bg-[var(--brand-pink)] px-8 py-3 rounded-lg text-xl font-semibold shadow-lg hover:bg-pink-700">Get Support</a>
+      <h2 class="text-5xl font-extrabold mb-6">
+        Proper Yorkshire Support, Delivered With Heart
+      </h2>
+      <p class="text-xl mb-6">
+        High-quality mental health and learning disability support across West Yorkshire —
+        empowering individuals to live confidently and independently.
+      </p>
+      <a href="#contact" class="bg-[var(--brand-pink)] px-8 py-3 rounded-lg text-xl font-semibold shadow-lg hover:bg-pink-700">
+        Get Support
+      </a>
     </div>
 
     <img src="https://undraw.co/api/illustrations/8cb34890-0764-49a5-9644-2df5ced45120"
@@ -52,6 +70,231 @@ body { font-family: Arial, sans-serif; }
   </div>
 </section>
 
-<!-- trimmed for brevity but assume full HTML here -->
+
+
+<!-- ABOUT US -->
+<section id="about" class="container mx-auto px-6 py-20">
+  <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-lg leading-relaxed">
+
+    <h2 class="text-4xl font-bold mb-6">About Us</h2>
+
+    <p class="text-lg mb-4">
+      Yorkshire Rose Care Ltd was founded to bring proper Yorkshire values into care —
+      honesty, compassion, resilience and community spirit. We support adults with mental
+      health needs and learning disabilities across West Yorkshire.
+    </p>
+
+    <p class="text-lg mb-4">
+      From Bradford to Huddersfield, Halifax to Wakefield — we’re committed to improving lives,
+      promoting independence and providing support that’s warm, person-centred and genuinely life-changing.
+    </p>
+
+    <p class="text-lg">
+      We do what Yorkshire does best — look after our own.
+    </p>
+
+  </div>
+</section>
+
+
+
+<!-- VALUES -->
+<section id="values" class="bg-white py-20 px-6">
+  <div class="container mx-auto">
+
+    <h2 class="text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
+
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+
+      <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
+        <h3 class="text-3xl font-bold mb-3">Proud</h3>
+        <p>We take pride in the people we support and the communities we serve. Yorkshire pride, Yorkshire care.</p>
+      </div>
+
+      <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-pink)] text-white">
+        <h3 class="text-3xl font-bold mb-3">Resilient</h3>
+        <p>We stand strong through challenges and support individuals to rebuild confidence and independence.</p>
+      </div>
+
+      <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
+        <h3 class="text-3xl font-bold mb-3">Committed</h3>
+        <p>We go above and beyond to deliver safe, high-quality care that makes a real difference.</p>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
+
+
+<!-- SERVICES -->
+<section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white">
+  <div class="container mx-auto">
+    <h2 class="text-4xl font-bold text-center mb-12">What We Offer</h2>
+
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
+        <img src="https://undraw.co/api/illustrations/38e04c5b-0a93-4981-aff7-4dc2621c4ceb"
+             class="rounded-xl mb-4" alt="Domiciliary Care">
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Domiciliary Care</h3>
+        <p>Support at home — independence, daily living, emotional wellbeing and personal growth.</p>
+      </div>
+
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
+        <img src="https://undraw.co/api/illustrations/7822de05-852d-4c95-9801-71f49afdb16e"
+             class="rounded-xl mb-4" alt="Supported Living">
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Supported Living</h3>
+        <p>Safe, structured support — promoting choice, confidence and community engagement.</p>
+      </div>
+
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
+        <img src="https://undraw.co/api/illustrations/ed464ee5-928a-4386-88c2-2189bb15741f"
+             class="rounded-xl mb-4" alt="Specialist Support">
+        <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Specialist Support</h3>
+        <p>Mental health recovery, learning disability support and personalised care planning.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+
+<!-- AMBASSADOR -->
+<section id="ambassador" class="bg-white py-20 px-6">
+  <div class="container mx-auto max-w-4xl text-center">
+
+    <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-10">
+      Our Ambassador – Chris Kamara
+    </h2>
+
+    <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-2xl">
+
+      <div class="mx-auto mb-6">
+        <img src="CK-image.jpg"
+             onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/3/3c/Placeholder_view_vector.svg'"
+             class="mx-auto rounded-full shadow-xl h-48 w-48 object-cover border-4 border-white"
+             alt="Chris Kamara">
+      </div>
+
+      <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative max-w-2xl mx-auto">
+        <p class="text-lg italic font-semibold text-center">
+          “Yorkshire Rose Care Ltd are at the heart of the Bradford community providing outstanding 
+          care and support for those truly in need. I am proud to be an ambassador of the organisation.”
+        </p>
+
+        <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent 
+                    absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
+      </div>
+
+      <p class="mt-8 text-lg font-medium">
+        Chris Kamara supports our mission to deliver high-quality, compassionate Yorkshire care that changes lives.
+      </p>
+
+    </div>
+
+  </div>
+</section>
+
+
+
+<!-- PARTNERS -->
+<section id="partners" class="container mx-auto px-6 py-20">
+  <h2 class="text-4xl font-bold text-[var(--brand-blue)] text-center mb-12">Our Partners</h2>
+
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+
+    <a href="https://www.bradfordcitycf.org.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Bradford City Community Foundation
+    </a>
+
+    <a href="https://www.rugbyleaguecares.org" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Rugby League Cares
+    </a>
+
+    <a href="https://www.mindinbradford.org.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Mind in Bradford
+    </a>
+
+    <a href="https://www.samaritans.org" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Samaritans
+    </a>
+
+    <a href="https://andysmanclub.co.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Andy’s Man Club
+    </a>
+
+    <a href="https://www.premierleague.com/communities" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       Premier League Foundation
+    </a>
+
+  </div>
+</section>
+
+
+
+<!-- CONTACT -->
+<section id="contact" class="bg-[var(--brand-pink)] py-20 px-6 text-white">
+  <div class="container mx-auto max-w-3xl">
+
+    <h2 class="text-4xl font-bold text-center mb-10">Contact Us</h2>
+
+    <form action="https://formspree.io/f/xnnegodr" method="POST"
+          class="bg-white text-gray-900 p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-blue)]">
+
+      <label class="block mb-6">
+        <span class="text-lg font-semibold text-[var(--brand-blue)]">Full Name</span>
+        <input type="text" name="name" required
+               class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg">
+      </label>
+
+      <label class="block mb-6">
+        <span class="text-lg font-semibold text-[var(--brand-blue)]">Email</span>
+        <input type="email" name="_replyto" required
+               class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg">
+      </label>
+
+      <label class="block mb-6">
+        <span class="text-lg font-semibold text-[var(--brand-blue)]">Message</span>
+        <textarea name="message" rows="5" required
+                  class="w-full mt-2 p-3 border-2 border-[var(--brand-blue)] rounded-lg"></textarea>
+      </label>
+
+      <button type="submit"
+              class="bg-[var(--brand-blue)] text-white w-full py-3 rounded-lg text-lg font-bold hover:bg-blue-900">
+        Send Message
+      </button>
+
+    </form>
+
+    <div class="text-center mt-10">
+      <img src="cqc-logo.png"
+           onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/0/09/Care_Quality_Commission_logo.svg'"
+           class="mx-auto h-20 mb-4" alt="CQC Logo">
+
+      <a href="https://www.cqc.org.uk"
+         class="font-bold text-xl underline text-white" target="_blank">
+         Visit our CQC Page
+      </a>
+    </div>
+
+    <div class="mt-10 text-center leading-relaxed text-lg">
+      <p class="font-bold">BizSpace Business Centre</p>
+      <p>Knowles Ln, Dudley Hill, Bradford BD4 9SW</p>
+      <p class="font-semibold mt-2">Tel: 07793 487 157</p>
+      <p>Delivering outstanding care across West Yorkshire</p>
+    </div>
+
+  </div>
+</section>
+
 </body>
 </html>
