--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Yorkshire Rose Care</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
@@ -17,18 +17,20 @@ body { font-family: Arial, sans-serif; }
 
 <body class="bg-gray-50 text-gray-900">
 
+
 <!-- TOP CONTACT BAR -->
 <div class="bg-[var(--brand-blue)] text-white py-2 text-center text-lg font-semibold">
   📞 07793 487 157 &nbsp;&nbsp; | &nbsp;&nbsp; ✉️ info@yorkshirerosecare.co.uk
 </div>
 
+
 <!-- HEADER -->
 <header class="bg-white shadow-md border-b-4 border-[var(--brand-pink)]">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
 
-    <!-- LOGO -->
     <div class="flex items-center space-x-3">
-      <img src="yrc-logo.jpg" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/0/09/White_Rose_of_York_symbol.svg'" 
+      <img src="yrc-logo.jpg" 
+           onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/0/09/White_Rose_of_York_symbol.svg'" 
            alt="Yorkshire Rose Care Logo"
            class="h-20 drop-shadow-md">
       <h1 class="text-4xl font-extrabold text-[var(--brand-pink)]">Yorkshire Rose Care</h1>
@@ -48,8 +50,8 @@ body { font-family: Arial, sans-serif; }
 
 
 
-<!-- HERO -->
-<section class="relative bg-[var(--brand-blue)] py-20 px-6 text-white">
+<!-- HERO SECTION -->
+<section class="bg-[var(--brand-blue)] text-white py-20 px-6">
   <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
 
     <div>
@@ -65,10 +67,14 @@ body { font-family: Arial, sans-serif; }
       </a>
     </div>
 
-    <img src="https://undraw.co/api/illustrations/8cb34890-0764-49a5-9644-2df5ced45120"
-         class="rounded-2xl shadow-xl" alt="Digital Support Illustration">
+    <img 
+      src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_medical_care_movb.svg" 
+      alt="Healthcare Illustration"
+      class="rounded-2xl shadow-2xl">
   </div>
 </section>
+
+
 
 
 
@@ -79,22 +85,24 @@ body { font-family: Arial, sans-serif; }
     <h2 class="text-4xl font-bold mb-6">About Us</h2>
 
     <p class="text-lg mb-4">
-      Yorkshire Rose Care Ltd was founded to bring proper Yorkshire values into care —
-      honesty, compassion, resilience and community spirit. We support adults with mental
-      health needs and learning disabilities across West Yorkshire.
+      Yorkshire Rose Care brings proper Yorkshire values into the world of care — compassion, resilience,
+      honesty and community spirit. We support adults with mental health needs and learning disabilities
+      across West Yorkshire.
     </p>
 
     <p class="text-lg mb-4">
-      From Bradford to Huddersfield, Halifax to Wakefield — we’re committed to improving lives,
-      promoting independence and providing support that’s warm, person-centred and genuinely life-changing.
+      From Bradford to Halifax, Leeds to Huddersfield — we are committed to delivering outstanding, 
+      person-centred support that helps people live safely, confidently, and independently in their own communities.
     </p>
 
     <p class="text-lg">
-      We do what Yorkshire does best — look after our own.
+      We’re proud to serve Yorkshire, and even prouder of the lives we help transform.
     </p>
 
   </div>
 </section>
+
+
 
 
 
@@ -113,12 +121,12 @@ body { font-family: Arial, sans-serif; }
 
       <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-pink)] text-white">
         <h3 class="text-3xl font-bold mb-3">Resilient</h3>
-        <p>We stand strong through challenges and support individuals to rebuild confidence and independence.</p>
+        <p>We support people through challenges with strength, kindness and determination.</p>
       </div>
 
       <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
         <h3 class="text-3xl font-bold mb-3">Committed</h3>
-        <p>We go above and beyond to deliver safe, high-quality care that makes a real difference.</p>
+        <p>We deliver safe, high-quality support that changes lives for the better.</p>
       </div>
 
     </div>
@@ -128,30 +136,40 @@ body { font-family: Arial, sans-serif; }
 
 
 
+
+
+
 <!-- SERVICES -->
 <section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white">
   <div class="container mx-auto">
+
     <h2 class="text-4xl font-bold text-center mb-12">What We Offer</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
+      <!-- DOM CARE -->
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
-        <img src="https://undraw.co/api/illustrations/38e04c5b-0a93-4981-aff7-4dc2621c4ceb"
-             class="rounded-xl mb-4" alt="Domiciliary Care">
+        <img 
+        src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_medicine_b1ol.svg"
+        class="rounded-xl mb-4">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Domiciliary Care</h3>
-        <p>Support at home — independence, daily living, emotional wellbeing and personal growth.</p>
+        <p>Support at home — daily living, personal care, emotional wellbeing and independence.</p>
       </div>
 
+      <!-- SUPPORTED LIVING -->
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
-        <img src="https://undraw.co/api/illustrations/7822de05-852d-4c95-9801-71f49afdb16e"
-             class="rounded-xl mb-4" alt="Supported Living">
+        <img 
+        src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_home_settings_re_pkya.svg"
+        class="rounded-xl mb-4">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Supported Living</h3>
-        <p>Safe, structured support — promoting choice, confidence and community engagement.</p>
+        <p>Safe, structured support that builds independence, confidence and community involvement.</p>
       </div>
 
+      <!-- SPECIALIST SUPPORT -->
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
-        <img src="https://undraw.co/api/illustrations/ed464ee5-928a-4386-88c2-2189bb15741f"
-             class="rounded-xl mb-4" alt="Specialist Support">
+        <img 
+        src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_mindfulness_scgo.svg"
+        class="rounded-xl mb-4">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Specialist Support</h3>
         <p>Mental health recovery, learning disability support and personalised care planning.</p>
       </div>
@@ -159,6 +177,9 @@ body { font-family: Arial, sans-serif; }
     </div>
   </div>
 </section>
+
+
+
 
 
 
@@ -190,13 +211,16 @@ body { font-family: Arial, sans-serif; }
       </div>
 
       <p class="mt-8 text-lg font-medium">
-        Chris Kamara supports our mission to deliver high-quality, compassionate Yorkshire care that changes lives.
+        We are honoured to have Chris Kamara supporting our mission across West Yorkshire.
       </p>
 
     </div>
 
   </div>
 </section>
+
+
+
 
 
 
@@ -238,6 +262,9 @@ body { font-family: Arial, sans-serif; }
 
   </div>
 </section>
+
+
+
 
 
 
