--- a/index.html
+++ b/index.html
@@ -17,22 +17,17 @@ body { font-family: Arial, sans-serif; }
 
 <body class="bg-gray-50 text-gray-900">
 
-
 <!-- TOP CONTACT BAR -->
 <div class="bg-[var(--brand-blue)] text-white py-2 text-center text-lg font-semibold">
-  📞 07793 487 157 &nbsp;&nbsp; | &nbsp;&nbsp; ✉️ info@yorkshirerosecare.co.uk
+  📞 07793 487 157 | ✉️ info@yorkshirerosecare.co.uk
 </div>
-
 
 <!-- HEADER -->
 <header class="bg-white shadow-md border-b-4 border-[var(--brand-pink)]">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
 
     <div class="flex items-center space-x-3">
-      <img src="yrc-logo.jpg" 
-           onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/0/09/White_Rose_of_York_symbol.svg'" 
-           alt="Yorkshire Rose Care Logo"
-           class="h-20 drop-shadow-md">
+      <img src="yrc-logo.jpg" alt="Yorkshire Rose Care Logo" class="h-20 drop-shadow-md">
       <h1 class="text-4xl font-extrabold text-[var(--brand-pink)]">Yorkshire Rose Care</h1>
     </div>
 
@@ -48,35 +43,19 @@ body { font-family: Arial, sans-serif; }
   </div>
 </header>
 
-
-
 <!-- HERO SECTION -->
 <section class="bg-[var(--brand-blue)] text-white py-20 px-6">
-  <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-
-    <div>
-      <h2 class="text-5xl font-extrabold mb-6">
-        Proper Yorkshire Support, Delivered With Heart
-      </h2>
-      <p class="text-xl mb-6">
-        High-quality mental health and learning disability support across West Yorkshire —
-        empowering individuals to live confidently and independently.
-      </p>
-      <a href="#contact" class="bg-[var(--brand-pink)] px-8 py-3 rounded-lg text-xl font-semibold shadow-lg hover:bg-pink-700">
-        Get Support
-      </a>
-    </div>
-
-    <img 
-      src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_medical_care_movb.svg" 
-      alt="Healthcare Illustration"
-      class="rounded-2xl shadow-2xl">
+  <div class="container mx-auto text-center max-w-3xl">
+    <h2 class="text-5xl font-extrabold mb-6">Proper Yorkshire Support Delivered With Heart</h2>
+    <p class="text-xl mb-8">
+      High quality mental health and learning disability support across West Yorkshire. 
+      Empowering individuals to live confidently and independently.
+    </p>
+    <a href="#contact" class="bg-[var(--brand-pink)] px-8 py-3 rounded-lg text-xl font-semibold shadow-lg hover:bg-pink-700">
+      Get Support
+    </a>
   </div>
 </section>
-
-
-
-
 
 <!-- ABOUT US -->
 <section id="about" class="container mx-auto px-6 py-20">
@@ -85,59 +64,47 @@ body { font-family: Arial, sans-serif; }
     <h2 class="text-4xl font-bold mb-6">About Us</h2>
 
     <p class="text-lg mb-4">
-      Yorkshire Rose Care brings proper Yorkshire values into the world of care — compassion, resilience,
-      honesty and community spirit. We support adults with mental health needs and learning disabilities
-      across West Yorkshire.
+      Yorkshire Rose Care was founded with a passion to bring real Yorkshire values into the care sector. 
+      Compassion, resilience, honesty and community spirit shape everything we do.
     </p>
 
     <p class="text-lg mb-4">
-      From Bradford to Halifax, Leeds to Huddersfield — we are committed to delivering outstanding, 
-      person-centred support that helps people live safely, confidently, and independently in their own communities.
+      We support adults with mental health needs and learning disabilities across West Yorkshire. 
+      Our focus is on helping people live safely, confidently and independently in their own homes and communities.
     </p>
 
     <p class="text-lg">
-      We’re proud to serve Yorkshire, and even prouder of the lives we help transform.
+      We are proud of the difference we make and proud to support people across Yorkshire.
     </p>
 
   </div>
 </section>
 
-
-
-
-
 <!-- VALUES -->
 <section id="values" class="bg-white py-20 px-6">
   <div class="container mx-auto">
-
     <h2 class="text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
       <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
         <h3 class="text-3xl font-bold mb-3">Proud</h3>
-        <p>We take pride in the people we support and the communities we serve. Yorkshire pride, Yorkshire care.</p>
+        <p>We take pride in the people we support and the communities we serve.</p>
       </div>
 
       <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-pink)] text-white">
         <h3 class="text-3xl font-bold mb-3">Resilient</h3>
-        <p>We support people through challenges with strength, kindness and determination.</p>
+        <p>We support people through challenges with strength, kindness and consistency.</p>
       </div>
 
       <div class="p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white">
         <h3 class="text-3xl font-bold mb-3">Committed</h3>
-        <p>We deliver safe, high-quality support that changes lives for the better.</p>
+        <p>We deliver high quality support that creates real, lasting change.</p>
       </div>
 
     </div>
-
   </div>
 </section>
-
-
-
-
-
 
 <!-- SERVICES -->
 <section id="services" class="bg-[var(--brand-blue)] py-20 px-6 text-white">
@@ -147,63 +114,49 @@ body { font-family: Arial, sans-serif; }
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
-      <!-- DOM CARE -->
-      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
-        <img 
-        src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_medicine_b1ol.svg"
-        class="rounded-xl mb-4">
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Domiciliary Care</h3>
-        <p>Support at home — daily living, personal care, emotional wellbeing and independence.</p>
+        <p>Support at home including daily living assistance, emotional support and independence based care.</p>
       </div>
 
-      <!-- SUPPORTED LIVING -->
-      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
-        <img 
-        src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_home_settings_re_pkya.svg"
-        class="rounded-xl mb-4">
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Supported Living</h3>
-        <p>Safe, structured support that builds independence, confidence and community involvement.</p>
+        <p>Structured support that promotes independence, confidence and community participation.</p>
       </div>
 
-      <!-- SPECIALIST SUPPORT -->
-      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] hover:scale-105 transition">
-        <img 
-        src="https://cdn.jsdelivr.net/gh/justinmahar/undraw-illustrations/undraw_mindfulness_scgo.svg"
-        class="rounded-xl mb-4">
+      <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Specialist Support</h3>
-        <p>Mental health recovery, learning disability support and personalised care planning.</p>
+        <p>Tailored mental health and learning disability support focused on wellbeing and recovery.</p>
       </div>
 
     </div>
   </div>
 </section>
 
-
-
-
-
-
-<!-- AMBASSADOR -->
+<!-- AMBASSADOR SECTION -->
 <section id="ambassador" class="bg-white py-20 px-6">
   <div class="container mx-auto max-w-4xl text-center">
 
     <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-10">
-      Our Ambassador – Chris Kamara
+      Our Ambassador Chris Kamara
     </h2>
+
+    <p class="text-xl font-semibold mb-6 text-[var(--brand-blue)]">
+      Former Footballer, Manager and TV Personality
+    </p>
 
     <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-2xl">
 
       <div class="mx-auto mb-6">
         <img src="CK-image.jpg"
-             onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/3/3c/Placeholder_view_vector.svg'"
              class="mx-auto rounded-full shadow-xl h-48 w-48 object-cover border-4 border-white"
              alt="Chris Kamara">
       </div>
 
       <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative max-w-2xl mx-auto">
         <p class="text-lg italic font-semibold text-center">
-          “Yorkshire Rose Care Ltd are at the heart of the Bradford community providing outstanding 
-          care and support for those truly in need. I am proud to be an ambassador of the organisation.”
+          "Yorkshire Rose Care Ltd are at the heart of the Bradford community providing outstanding 
+          care and support for those truly in need. I am proud to be an ambassador of the organisation."
         </p>
 
         <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent 
@@ -215,14 +168,8 @@ body { font-family: Arial, sans-serif; }
       </p>
 
     </div>
-
   </div>
 </section>
-
-
-
-
-
 
 <!-- PARTNERS -->
 <section id="partners" class="container mx-auto px-6 py-20">
@@ -231,42 +178,22 @@ body { font-family: Arial, sans-serif; }
   <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
 
     <a href="https://www.bradfordcitycf.org.uk" target="_blank"
-       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl text-center">
        Bradford City Community Foundation
     </a>
 
     <a href="https://www.rugbyleaguecares.org" target="_blank"
-       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl text-center">
        Rugby League Cares
     </a>
 
-    <a href="https://www.mindinbradford.org.uk" target="_blank"
-       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
-       Mind in Bradford
-    </a>
-
-    <a href="https://www.samaritans.org" target="_blank"
-       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
-       Samaritans
-    </a>
-
-    <a href="https://andysmanclub.co.uk" target="_blank"
-       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
-       Andy’s Man Club
-    </a>
-
     <a href="https://www.premierleague.com/communities" target="_blank"
-       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl hover:scale-105 transition text-center">
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl text-center">
        Premier League Foundation
     </a>
 
   </div>
 </section>
-
-
-
-
-
 
 <!-- CONTACT -->
 <section id="contact" class="bg-[var(--brand-pink)] py-20 px-6 text-white">
@@ -303,8 +230,7 @@ body { font-family: Arial, sans-serif; }
     </form>
 
     <div class="text-center mt-10">
-      <img src="cqc-logo.png"
-           onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/0/09/Care_Quality_Commission_logo.svg'"
+      <img src="cqc-logo.jpg"
            class="mx-auto h-20 mb-4" alt="CQC Logo">
 
       <a href="https://www.cqc.org.uk"
