--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body { font-family: Arial, sans-serif; }
       <a href="#about" class="hover:text-[var(--brand-pink)]">About Us</a>
       <a href="#services" class="hover:text-[var(--brand-pink)]">Services</a>
       <a href="#values" class="hover:text-[var(--brand-pink)]">Values</a>
-      <a href="#ambassador" class="hover:text-[var(--brand-pink)]">Ambassador</a>
+      <a href="#testimonials" class="hover:text-[var(--brand-pink)]">Testimonials</a>
       <a href="#partners" class="hover:text-[var(--brand-pink)]">Partners</a>
       <a href="#contact" class="hover:text-[var(--brand-pink)]">Contact</a>
     </nav>
@@ -48,7 +48,7 @@ body { font-family: Arial, sans-serif; }
   <div class="container mx-auto text-center max-w-3xl">
     <h2 class="text-5xl font-extrabold mb-6">Proper Yorkshire Support Delivered With Heart</h2>
     <p class="text-xl mb-8">
-      High quality mental health and learning disability support across West Yorkshire. 
+      High quality mental health and learning disability support across West Yorkshire.
       Empowering individuals to live confidently and independently.
     </p>
     <a href="#contact" class="bg-[var(--brand-pink)] px-8 py-3 rounded-lg text-xl font-semibold shadow-lg hover:bg-pink-700">
@@ -64,13 +64,13 @@ body { font-family: Arial, sans-serif; }
     <h2 class="text-4xl font-bold mb-6">About Us</h2>
 
     <p class="text-lg mb-4">
-      Yorkshire Rose Care was founded with a passion to bring real Yorkshire values into the care sector. 
+      Yorkshire Rose Care was founded with a passion to bring real Yorkshire values into the care sector.
       Compassion, resilience, honesty and community spirit shape everything we do.
     </p>
 
     <p class="text-lg mb-4">
-      We support adults with mental health needs and learning disabilities across West Yorkshire. 
-      Our focus is on helping people live safely, confidently and independently in their own homes and communities.
+      We support adults with mental health needs and learning disabilities across West Yorkshire.
+      Our focus is on helping people live safely, confidently and independently.
     </p>
 
     <p class="text-lg">
@@ -116,7 +116,7 @@ body { font-family: Arial, sans-serif; }
 
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Domiciliary Care</h3>
-        <p>Support at home including daily living assistance, emotional support and independence based care.</p>
+        <p>Support at home including daily living assistance, emotional support and independence focused care.</p>
       </div>
 
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
@@ -126,46 +126,64 @@ body { font-family: Arial, sans-serif; }
 
       <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)]">
         <h3 class="text-2xl font-bold text-[var(--brand-blue)] mb-3">Specialist Support</h3>
-        <p>Tailored mental health and learning disability support focused on wellbeing and recovery.</p>
+        <p>Mental health support, community engagement and personalised care planning.</p>
       </div>
 
     </div>
   </div>
 </section>
 
-<!-- AMBASSADOR SECTION -->
-<section id="ambassador" class="bg-white py-20 px-6">
-  <div class="container mx-auto max-w-4xl text-center">
+<!-- TESTIMONIALS -->
+<section id="testimonials" class="bg-white py-20 px-6">
+  <div class="container mx-auto max-w-5xl text-center">
 
-    <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-10">
-      Our Ambassador Chris Kamara
-    </h2>
+    <h2 class="text-4xl font-bold text-[var(--brand-blue)] mb-12">Testimonials</h2>
 
-    <p class="text-xl font-semibold mb-6 text-[var(--brand-blue)]">
-      Former Footballer, Manager and TV Personality
-    </p>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
 
-    <div class="bg-[var(--brand-pink)] text-white p-10 rounded-2xl shadow-2xl">
-
-      <div class="mx-auto mb-6">
-        <img src="CK-image.jpg"
-             class="mx-auto rounded-full shadow-xl h-48 w-48 object-cover border-4 border-white"
-             alt="Chris Kamara">
+      <!-- Testimonial 1 -->
+      <div class="bg-[var(--brand-pink)] text-white p-8 rounded-2xl shadow-xl">
+        <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
+          <p class="text-lg italic font-semibold">
+            "Yorkshire Rose Care changed my life. The team supported me through a very difficult time and helped me feel confident again."
+          </p>
+          <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
+        </div>
+        <p class="mt-6 font-bold text-xl">Service User</p>
       </div>
 
-      <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative max-w-2xl mx-auto">
-        <p class="text-lg italic font-semibold text-center">
-          "Yorkshire Rose Care Ltd are at the heart of the Bradford community providing outstanding 
-          care and support for those truly in need. I am proud to be an ambassador of the organisation."
-        </p>
-
-        <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent 
-                    absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
+      <!-- Testimonial 2 -->
+      <div class="bg-[var(--brand-blue)] text-white p-8 rounded-2xl shadow-xl">
+        <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
+          <p class="text-lg italic font-semibold">
+            "The support workers are kind, patient and understanding. Nothing is too much trouble and they treat people with dignity and respect."
+          </p>
+          <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
+        </div>
+        <p class="mt-6 font-bold text-xl">Family Member</p>
       </div>
 
-      <p class="mt-8 text-lg font-medium">
-        We are honoured to have Chris Kamara supporting our mission across West Yorkshire.
-      </p>
+      <!-- Testimonial 3 -->
+      <div class="bg-[var(--brand-blue)] text-white p-8 rounded-2xl shadow-xl">
+        <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
+          <p class="text-lg italic font-semibold">
+            "Professional, reliable and truly caring. Yorkshire Rose Care offer the best support service we have ever used."
+          </p>
+          <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
+        </div>
+        <p class="mt-6 font-bold text-xl">Local Authority Partner</p>
+      </div>
+
+      <!-- Testimonial 4 -->
+      <div class="bg-[var(--brand-pink)] text-white p-8 rounded-2xl shadow-xl">
+        <div class="bg-white text-gray-900 p-6 rounded-xl shadow-lg relative">
+          <p class="text-lg italic font-semibold">
+            "Support that genuinely makes a difference. The team go the extra mile every day."
+          </p>
+          <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] border-l-transparent absolute -bottom-5 left-1/2 transform -translate-x-1/2"></div>
+        </div>
+        <p class="mt-6 font-bold text-xl">Health Professional</p>
+      </div>
 
     </div>
   </div>
@@ -187,8 +205,23 @@ body { font-family: Arial, sans-serif; }
        Rugby League Cares
     </a>
 
-    <a href="https://www.premierleague.com/communities" target="_blank"
+    <a href="https://www.mindinbradford.org.uk" target="_blank"
        class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl text-center">
+       Mind in Bradford
+    </a>
+
+    <a href="https://www.samaritans.org" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl text-center">
+       Samaritans
+    </a>
+
+    <a href="https://andysmanclub.co.uk" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-pink)] text-white font-bold text-xl shadow-xl text-center">
+       Andy’s Man Club
+    </a>
+
+    <a href="https://www.premierleague.com/communities" target="_blank"
+       class="p-8 rounded-2xl bg-[var(--brand-blue)] text-white font-bold text-xl shadow-xl text-center">
        Premier League Foundation
     </a>
 
